# unencrypto

.github/workflows/: deploy.yml
client-svelte/: package-lock.json  package.json  svelte.config.js
client-svelte/.next/: next.config.js
client-svelte/src/: app.css
client-svelte/src/lib/: Matching.svelte
client-svelte/src/lib/datatypes/: answer.ts  game.ts  guess.ts  one_team_round.ts  player.ts  playerdata.ts  round.ts  score.ts
client-svelte/src/lib/functions/: helper.ts  requests.ts
client-svelte/src/lib/menus/: Answer.svelte  AnswerWait.svelte  Card.svelte  GameFooter.svelte  Guess.svelte  GuessCard.css  GuessCardClue.svelte  GuessCardGuess.svelte  GuessCardRow.svelte  GuessWait.svelte  Join.svelte  OurCard.svelte  Results.svelte  TheirCard.svelte
client-svelte/src/routes/: +page.svelte
client-svelte/src/routes/game/: +page.svelte
client-svelte/src/routes/guess/: +page.svelte
client-svelte/src/routes/results/: +page.svelte
server-rust/: Cargo.toml  README.md  words.txt
server-rust/src/: main.rs  question_lookup.rs  tests.rs  types.rs  word_lookup.rs
