[package]
name = "unencrypto"
version = "0.1.0"
authors = ["Luke McNeil <lukemcneil61@gmail.com>"]
edition = "2021"

[dependencies]
parking_lot = "0.12"
rand = "0.8"
rocket = "0.4"
rocket_contrib = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
rocket_cors = "0.5.1"